--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,16 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(to bottom right, rgb(165, 161, 161), white);
+  background-image: url('./World-Map-Triangles-Wireframe.svg');
+  background-repeat: no-repeat;
+  background-size: 1500px;
+  background-position: center;
   height: 100vh;
+  background-color: rgb(208, 203, 203);
 }
 
 .map {
-  border-radius: 10%;
+  border-radius: 50%;
   margin-top: 3rem;
 }
 
@@ -20,4 +24,12 @@ body {
 .App p {
   font-weight: bold;
   font-size: 20px;
+}
+
+img {
+  opacity: 0.9;
+}
+
+.lat-lon {
+  color: white;
 }
