--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -7,10 +7,12 @@
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
+  color: white;
 }
 
 h1 {
   font-weight: bold;
+  color: white;
 }
 
 .search {
